[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "wcwidth"
version = "0.3.0"
description = "Measures the displayed width of unicode strings in a terminal"
readme = "README.rst"
keywords = [
  "cjk",
  "combining",
  "console",
  "eastasian",
  "emoji",
  "emulator",
  "terminal",
  "unicode",
  "wcswidth",
  "wcwidth",
  "xterm",
]
license = "MIT"
license-files = [ "LICENSE" ]
authors = [
  { name = "Jeff Quast", email = "contact@jeffquast.com" },
]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Internationalization",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Localization",
  "Topic :: Terminals",
]

[project.urls]
Homepage = "https://github.com/jquast/wcwidth"
